
= rufus-mnemo CHANGELOG.txt


== rufus-mnemo - 1.2.3    released 2012/06/17

- fix Rufus::Mnemo.split(s)


== rufus-mnemo - 1.2.2    released 2011/08/27

- reworked aliases (aligned with README)


== rufus-mnemo - 1.2.1    released 2011/08/27

- Rufus::Mnemo.to_s(i) (alias for .from_i(i))


== rufus-mnemo - 1.2.0    released 2010/11/22

- neutralized -W warnings


== rufus-mnemo - 1.0.0    released 2008/01/25
